Fix artifacts due to linewidth We just use the method already used for lines with markers. It's similar idea to what the bug owner posted, just more advanced

BUG: 260518